--- a/twilio/project.yml
+++ b/twilio/project.yml
@@ -7,6 +7,16 @@ packages:
       parameters: {}
       annotations: {}
       functions:
+        - name: dialer
+          binary: false
+          main: ""
+          runtime: python:default
+          web: true
+          webSecure: false
+          parameters: {}
+          environment: {}
+          annotations: {}
+          limits: {}
         - name: outgoing
           binary: false
           main: ""
