--- a/twilio/project.yml
+++ b/twilio/project.yml
@@ -3,7 +3,10 @@ environment: {}
 packages:
     - name: dialplans
       shared: false
-      environment: {}
+      environment:
+        AWS_TOPIC_ARN: "${AWS_TOPIC_ARN}"
+        AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+        AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       parameters: {}
       annotations: {}
       functions:
@@ -11,6 +14,16 @@ packages:
           binary: false
           main: ""
           runtime: python:default
+          web: true
+          webSecure: false
+          parameters: {}
+          environment: {}
+          annotations: {}
+          limits: {}
+        - name: dialer_status
+          binary: false
+          main: ""
+          runtime: nodejs:default
           web: true
           webSecure: false
           parameters: {}
