--- a/twilio/project.yml
+++ b/twilio/project.yml
@@ -20,10 +20,36 @@ packages:
           environment: {}
           annotations: {}
           limits: {}
+        - name: dial_sip
+          binary: false
+          main: ""
+          runtime: python:default
+          web: true
+          webSecure: false
+          parameters: {}
+          environment: {}
+          annotations: {}
+          limits: {}
+        - name: dial_sip_e164
+          binary: false
+          main: ""
+          runtime: python:default
+          web: true
+          webSecure: false
+          parameters: {}
+          environment: {}
+          annotations: {}
+          limits: {}
         - name: metric_dialer_status
           binary: false
           main: ""
           runtime: nodejs:default
+          web: true
+          webSecure: false
+          parameters: {}
+          environment: {}
+          annotations: {}
+          limits: {}
           web: true
           webSecure: false
           parameters: {}
