--- a/twilio/project.yml
+++ b/twilio/project.yml
@@ -7,6 +7,7 @@ packages:
         AWS_TOPIC_ARN: "${AWS_TOPIC_ARN}"
         AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
         AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+        INSTANCE: "${INSTANCE}"        
       parameters: {}
       annotations: {}
       functions:
