rename package from "dialplans" to "dialers"

--- a/twilio/project.yml
+++ b/twilio/project.yml
@@ -1,7 +1,7 @@
 parameters: {}
 environment: {}
 packages:
-    - name: dialplans
+    - name: dialers
       shared: false
       environment:
         AWS_TOPIC_ARN: "${AWS_TOPIC_ARN}"
