--- a/twilio/project.yml
+++ b/twilio/project.yml
@@ -7,6 +7,7 @@ packages:
         AWS_TOPIC_ARN: "${AWS_TOPIC_ARN}"
         AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
         AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+        ASSET_HOST: "${ASSET_HOST}"
         INSTANCE: "${INSTANCE}"        
       parameters: {}
       annotations: {}
@@ -27,6 +28,11 @@ packages:
           web: true
           webSecure: false
         - name: dial_sip_e164
+          binary: false
+          runtime: python:default
+          web: true
+          webSecure: false
+        - name: ivr
           binary: false
           runtime: python:default
           web: true
