--- a/app/chalicelib/assets/extensions.json
+++ b/app/chalicelib/assets/extensions.json
@@ -83,7 +83,7 @@
         "enable_emergency": false,
         "local_outgoing": true
     },
-    "ypsi": {
+    "landline": {
         "outgoing": "outgoing_ypsi",
         "caller_id": "+17345476651",
         "enable_emergency": true,
