implement 911 from top menu

--- a/app/chalicelib/environment/.env.sample
+++ b/app/chalicelib/environment/.env.sample
@@ -1,6 +1,16 @@
+# Normal variables.
+
 AWS_TOPIC_ARN=dummy
 ASSET_HOST=dummy
 TWILIO_ACCOUNT_SID=dummy
 TWILIO_AUTH_TOKEN=dummy
 
-operator_numbers=dummy
+# JSON variables.
+
+# Dummy_phone dummy
+# Dummy_phone dummy
+
+operator_numbers='[
+"dummy",
+"dummy"
+]'
