--- a/app/chalicelib/environment/.env.sample
+++ b/app/chalicelib/environment/.env.sample
@@ -7,8 +7,8 @@ TWILIO_AUTH_TOKEN=dummy
 
 # JSON variables.
 
-# Dummy_phone dummy
-# Dummy_phone dummy
+# Dummy_description dummy
+# Dummy_description dummy
 
 operator_numbers='[
 "dummy",
