--- a/app/chalicelib/assets/extensions.json
+++ b/app/chalicelib/assets/extensions.json
@@ -23,6 +23,12 @@
         "enable_emergency": true,
         "local_outgoing": false
     },
+    "clinton": {
+        "outgoing": "outgoing_portland",
+        "caller_id": "+15039465227",
+        "enable_emergency": true,
+        "local_outgoing": false
+    },
     "demo": {
         "outgoing": "outgoing_safe",
         "caller_id": "+15038945775",
@@ -74,6 +80,18 @@
     "sjac": {
         "outgoing": "outgoing_safe",
         "caller_id": "+15032126899",
+        "enable_emergency": false,
+        "local_outgoing": true
+    },
+    "street-books-one": {
+        "outgoing": "outgoing_portland",
+        "caller_id": "+15034681337",
+        "enable_emergency": false,
+        "local_outgoing": true
+    },
+    "street-books-two": {
+        "outgoing": "outgoing_dialtone",
+        "caller_id": "+15034681337",
         "enable_emergency": false,
         "local_outgoing": true
     },
