--- a/app/chalicelib/assets/extensions.json
+++ b/app/chalicelib/assets/extensions.json
@@ -29,7 +29,19 @@
         "enable_emergency": true,
         "local_outgoing": false
     },
-    "demo": {
+    "demo-one": {
+        "outgoing": "outgoing_safe",
+        "caller_id": "+15038945775",
+        "enable_emergency": false,
+        "local_outgoing": true
+    },
+    "demo-two": {
+        "outgoing": "outgoing_safe",
+        "caller_id": "+15038945775",
+        "enable_emergency": false,
+        "local_outgoing": true
+    },
+    "demo-three": {
         "outgoing": "outgoing_safe",
         "caller_id": "+15038945775",
         "enable_emergency": false,
@@ -66,6 +78,24 @@
         "local_outgoing": false
     },
     "groundscore": {
+        "outgoing": "outgoing_portland",
+        "caller_id": "+15033087601",
+        "enable_emergency": true,
+        "local_outgoing": false
+    },
+    "groundscore-one": {
+        "outgoing": "outgoing_portland",
+        "caller_id": "+15033087601",
+        "enable_emergency": true,
+        "local_outgoing": false
+    },
+    "groundscore-two": {
+        "outgoing": "outgoing_portland",
+        "caller_id": "+15033087601",
+        "enable_emergency": true,
+        "local_outgoing": false
+    },
+    "groundscore-three": {
         "outgoing": "outgoing_portland",
         "caller_id": "+15033087601",
         "enable_emergency": true,
