--- a/app/chalicelib/environment/.env.sample
+++ b/app/chalicelib/environment/.env.sample
@@ -1,7 +1,8 @@
 # Normal variables.
 
-AWS_TOPIC_ARN=dummy
 ASSET_HOST=dummy
+AWS_TOPIC_ARN=dummy
+AWS_DEFAULT_REGION=dummy
 TWILIO_ACCOUNT_SID=dummy
 TWILIO_AUTH_TOKEN=dummy
 
