add sisyphus number to env

--- a/app/chalicelib/environment/.env.sample
+++ b/app/chalicelib/environment/.env.sample
@@ -3,6 +3,7 @@
 ASSET_HOST=dummy
 AWS_TOPIC_ARN=dummy
 AWS_DEFAULT_REGION=dummy
+nanpa_sisyphus=dummy
 TWILIO_ACCOUNT_SID=dummy
 TWILIO_AUTH_TOKEN=dummy
 
