--- a/app/.chalice/config.json
+++ b/app/.chalice/config.json
@@ -1,6 +1,6 @@
 {
     "version": "2.0",
-    "app_name": "app",
+    "app_name": "dialplan",
     "stages": {
         "dev": {
             "api_gateway_stage": "api",
