--- a/app/chalicelib/environment/.env.sample
+++ b/app/chalicelib/environment/.env.sample
@@ -1,6 +1,7 @@
 # Normal variables.
 
 ASSET_HOST=dummy
+AWS_LOGS_TOPIC_ARN=dummy
 AWS_METRICS_TOPIC_ARN=dummy
 AWS_DEFAULT_REGION=dummy
 nanpa_sisyphus=dummy
