--- a/app-dialplan/chalicelib/environment/.env.sample
+++ b/app-dialplan/chalicelib/environment/.env.sample
@@ -5,6 +5,8 @@ AWS_LOGS_TOPIC_ARN=dummy
 AWS_METRICS_TOPIC_ARN=dummy
 AWS_DEFAULT_REGION=dummy
 nanpa_sisyphus=dummy
+# To be overwritten by chalice on deploy.
+stage=dummy
 TWILIO_ACCOUNT_SID=dummy
 TWILIO_AUTH_TOKEN=dummy
 
