--- a/app-dialplan/chalicelib/environment/.env.sample
+++ b/app-dialplan/chalicelib/environment/.env.sample
@@ -1,9 +1,9 @@
 # Normal variables.
 
+#AWS_DEFAULT_REGION=dummy
 ASSET_HOST=dummy
-AWS_LOGS_TOPIC_ARN=dummy
+#AWS_LOGS_TOPIC_ARN=dummy
 AWS_METRICS_TOPIC_ARN=dummy
-AWS_DEFAULT_REGION=dummy
 nanpa_sisyphus=dummy
 # To be overwritten by chalice on deploy.
 stage=dummy
