fix outoing for extension

--- a/app-dialplan/chalicelib/assets/extensions.json
+++ b/app-dialplan/chalicelib/assets/extensions.json
@@ -175,7 +175,7 @@
         "enable_emergency": false
     },
     "street-roots-two": {
-        "outgoing": "outgoing_dialtone",
+        "outgoing": "outgoing_portland",
         "caller_id": "+15034681337",
         "enable_emergency": false
     },
