update street roots extension

--- a/app-dialplan/chalicelib/assets/extensions.json
+++ b/app-dialplan/chalicelib/assets/extensions.json
@@ -191,8 +191,8 @@
     },
     "street-roots-one": {
         "outgoing": "outgoing_portland",
-        "caller_id": "+15034681337",
-        "enable_emergency": false
+        "caller_id": "+19712745717",
+        "enable_emergency": true
     },
     "street-roots-two": {
         "outgoing": "outgoing_portland",
