--- a/app-dialplan/chalicelib/assets/extensions.json
+++ b/app-dialplan/chalicelib/assets/extensions.json
@@ -174,6 +174,16 @@
         "caller_id": "+15033889637",
         "enable_emergency": true
     },
+    "seattle-thistle": {
+        "outgoing": "outgoing_seattle",
+        "caller_id": "+12068886424",
+        "enable_emergency": true
+    },
+    "seattle-estelitas": {
+        "outgoing": "outgoing_seattle",
+        "caller_id": "+12064663296",
+        "enable_emergency": true
+    },
     "sjac": {
         "outgoing": "outgoing_safe",
         "caller_id": "+15034681337",
