enable destination after dialtone other than top destination, to enable dialtone-first extensions

--- a/app-dialplan/chalicelib/assets/extensions.json
+++ b/app-dialplan/chalicelib/assets/extensions.json
@@ -85,7 +85,8 @@
         "enable_emergency": false
     },
     "dome-hab": {
-        "outgoing": "outgoing_safe",
+        "outgoing": "outgoing_dialtone",
+        "dialtone_ivr": "outgoing_safe",        
         "caller_id": "+15039436834",
         "enable_emergency": false
     },
@@ -145,7 +146,8 @@
         "enable_emergency": false
     },
     "pod-hab": {
-        "outgoing": "outgoing_safe",
+        "outgoing": "outgoing_dialtone",
+        "dialtone_ivr": "outgoing_safe",
         "caller_id": "+15039436834",
         "enable_emergency": false
     },
